--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -235,12 +235,12 @@ a:hover {
 
 /* Resultado de ecuaciones */
 .resaltado7 {
-    border: 1px solid #ecff3f;
+    border: 1px solid #e6f753;
     padding: 8px;
     font-family: 'Roboto'
 }
 .resaltado17 {
-    border: 1px solid #ecff3f;
+    border: 1px solid #e6f753;
     padding: 4px;
     font-family: 'Roboto';
 }
