--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -245,12 +245,12 @@ a:hover {
 
 /* Resultado de ecuaciones */
 .resaltado7 {
-    border: 1px solid #e6f753;
+    border: 1px solid #e2ee7a;
     padding: 8px;
     font-family: 'Roboto'
 }
 .resaltado17 {
-    border: 1px solid #e6f753;
+    border: 1px solid #e2ee7a;
     padding: 4px;
     font-family: 'Roboto';
 }
