--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -203,9 +203,19 @@ a:hover {
 }
 
 .resaltado111 {
-    color: rgb(255, 96, 207);
+    color: rgb(250, 10, 198);
     opacity: 1.5;
-    background-color: rgb(225, 255, 58);
+    background-color: rgb(217, 253, 15);
+    border-radius: 3px;
+    padding-left: 3px; /* Agrega padding a la izquierda */
+    padding-right: 3px; /* Agrega padding a la derecha */
+    font-family: 'Roboto';
+}
+
+.resaltado112 {
+    color: rgb(250, 10, 10);
+    opacity: 1.5;
+    background-color: rgb(217, 253, 15);
     border-radius: 3px;
     padding-left: 3px; /* Agrega padding a la izquierda */
     padding-right: 3px; /* Agrega padding a la derecha */
@@ -277,7 +287,7 @@ a:hover {
 /* Italic */
 .resaltado9 {
     font-style: italic;
-    color: #a5abf8; /* Cambia el color a tu preferencia */ 
+    color: #848cfa; /* Cambia el color a tu preferencia */ 
     opacity: 1.5; 
     font-family: 'Roboto'; 
 }
