--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -259,7 +259,7 @@ a:hover {
 .resaltado6 {
     font-style: italic;
     opacity: 1.5;
-    color: #edfa78; /* Cambia el color a tu preferencia */
+    color: #f0ff68; /* Cambia el color a tu preferencia */
     font-family: 'Roboto';
 }
 
