--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -132,7 +132,7 @@ main{
 .text__articulo-cover h3{
     font-size: 20px;
     /*color: rgb(122, 162, 235);*/
-    color: rgb(189, 46, 46);
+    color: rgb(235, 50, 50);
     font-weight: normal;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -160,7 +160,7 @@ main{
 .text__articulo-cover h6{
     font-size: 20px;
     /*color: rgb(122, 162, 235);*/
-    color: rgb(148, 170, 20);
+    color: rgb(238, 255, 0);
     font-weight: normal;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -269,7 +269,7 @@ a:hover {
 .resaltado6 {
     font-style: italic;
     opacity: 1.5;
-    color: #f0ff6c; /* Cambia el color a tu preferencia */
+    color: #ecff43; /* Cambia el color a tu preferencia */
     font-family: 'Roboto';
 }
 
