--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -406,7 +406,7 @@ a:hover {
 .resaltado6 {
     font-style: italic;
     opacity: 1.5;
-    color: #edfc65; /* Cambia el color a tu preferencia */
+    color: #f2ff7a; /* Cambia el color a tu preferencia */
     font-family: 'Roboto';
 }
 
