--- a/css/estilos.css
+++ b/css/estilos.css
@@ -388,6 +388,10 @@ body::-webkit-scrollbar-thumb:hover {
         display: none;
     }
 
+    #icon_water{
+        display: none;
+    }
+
     .banner__text{
         width: 100%;
         margin-top: -100px;
