--- a/css/estilos.css
+++ b/css/estilos.css
@@ -53,17 +53,43 @@ header.mover{
 }
 
 .menu nav ul a{
+    position: relative;
     font-size: 16px;
     text-decoration: none;
     color: black;
     transition: opacity 300ms;
 }
 
-.menu nav ul a:hover{
-    opacity: 0.6;
+.menu nav ul a::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -5px; /* espacio bajo el texto */
+    width: 0%;
+    height: 2px;
+    background-color: rgb(243, 51, 51); /* mismo color del hover */
+    transition: width 0.3s ease-in-out;
 }
 
-.btn__header-botonMenu,
+.menu nav ul a:hover{
+    color: rgb(243, 51, 51);
+}
+
+.menu nav ul a:hover::after{
+    width: 100%;
+}
+
+.btn__header-botonMenu{
+    padding: 14px 50px;
+    border: 1px solid #000000;
+    background: #000;
+    color: white;
+    font-weight: 450;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background, color, 300ms;
+    border-radius: 5px;
+}
 .btn__Whoami-cover{
     padding: 14px 50px;
     border: none;
@@ -80,6 +106,26 @@ header.mover{
     background: #69F1A1;
     color: #000;
 
+}
+
+.header-icons {
+    display: flex;
+    gap: 15px; /* separación entre iconos */
+    margin-left: 20px;
+}
+
+.header-icons img {
+    width: 28px; /* ajusta el tamaño a tu gusto */
+    height: 28px;
+    
+    opacity: 0.8;
+    transition: transform 0.3s, opacity 0.3s;
+    cursor: pointer;
+}
+
+.header-icons img:hover {
+    transform: scale(1.2);
+    opacity: 1;
 }
 
 #icon_menu{
@@ -305,7 +351,7 @@ body::-webkit-scrollbar-thumb:hover {
     background-color: rgba(255, 255, 255, 0.3); //* Color de la barra de desplazamiento al pasar el cursor sobre ella */
 }
 
-@media (max-width: 1024px){
+@media (max-width: 1300px){
     .container__header,main{
         padding: 20px;
     }
@@ -314,7 +360,10 @@ body::-webkit-scrollbar-thumb:hover {
         display: block;
         cursor: pointer;
         font-size: 24px;
+        color: #000 !important; 
     }
+    
+
 
     .header__botonMenu{
         display: none;
@@ -341,6 +390,8 @@ body::-webkit-scrollbar-thumb:hover {
         padding: 10px 40px;
     } 
 
+    
+    
     /* Clase Manipulada por JS */
     .mostrar_menu{
         height: auto;
