--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -15,6 +15,7 @@ body{
     background: linear-gradient(180deg, #0a0a0a 0%, #100c38 40%, #000000 100%);
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size: cover;
     min-height: 100vh;
     color: white;
     
