--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -1371,9 +1371,23 @@ body::-webkit-scrollbar-thumb:hover {
 
 @media (max-width: 720px){
     
-    body {
+body {
+  margin: 0;
+  background: #000; /* fallback */
+  position: relative;
+  z-index: 0;
+}
 
-        background-attachment: scroll;
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, #0a0a0a 0%, #100c38 40%, #000000 100%);
+  z-index: -1;
+}
     }
 
     .blog-image-doble img {
