--- a/css/style2.css
+++ b/css/style2.css
@@ -473,19 +473,15 @@ footer .content{
         transform: rotate(360deg);
     }
 }
-.autoShow{
-    animation: autoShowAnimation both;
-    animation-timeline: view(70% 5%);
-
+.autoShow {
+    opacity: 0;
+    transform: translateY(200px) scale(0.3);
+    transition: all 1s ease; /* transición suave */
 }
-@keyframes autoShowAnimation{
-    from{
-        opacity: 0;
-        transform: translateY(200px) scale(0.3);
-    }to{
-        opacity: 1;
-        transform: translateY(0) scale(1);
-    }
+
+.autoShow.show {
+    opacity: 1;
+    transform: translateY(0) scale(1);
 }
 .autoBLur{
     animation: autoBLurAnimation linear both;
