--- a/css/style2.css
+++ b/css/style2.css
@@ -376,11 +376,11 @@ footer .content{
     }
     .banner .image img{
         height: 100%;
-        left: -70%;
+        left: -80%;
     }
 }
 @media screen and (max-width: 1023px){
-        .container__header, main{
+        .container__header{
         padding: 20px;
     }
     main{
