--- a/css/style2.css
+++ b/css/style2.css
@@ -19,6 +19,7 @@ main{
     width: min(1400px, 100vw);
     margin: auto;
     padding: 20px;
+    padding-top: 100px;
 }
 
 header{
@@ -280,7 +281,7 @@ header2 img{
 
 .grid-3{
     --row: 6;
-    font-size: 10em;
+    font-size: 9em;
 }
 .grid-3 div{
     grid-column: 2/ 6;
@@ -295,6 +296,8 @@ header2 img{
 .grid-3 div:nth-child(4){
     grid-column: 1/ 7;
 }
+
+
 footer{
 
     min-height: 100vh;
