--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,7 @@
 /* Importar fuentes desde Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Indie+Flower&family=Permanent+Marker&family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Odibee+Sans&display=swap');
 @font-face {
     font-family: 'Only';
     src: url('../fonts/locals-only/Locals\ Only.ttf');
@@ -210,6 +211,7 @@ main{
 
 .text__information-cover h1{
     font-size: 50px;
+    font-family: "Libre Baskerville", sans-serif;
 }
 
 .text__information-cover p{
