--- a/css/estilos.css
+++ b/css/estilos.css
@@ -412,7 +412,7 @@ body::-webkit-scrollbar-thumb:hover {
 
 
 
-/* Barra negra con fade en los bordes */
+/* Barra Graffiti */
 .graffiti-bar {
   width: 100%;
   height: 100px;
